Skeleton on config generator code

--- a/vagga.yaml
+++ b/vagga.yaml
@@ -4,7 +4,7 @@ containers:
     setup:
     - !Alpine v3.4
     - !Repo edge/main
-    - !Install [py3-yaml]
+    - !Install [py3-yaml, py3-click]
 
   _bulk:
     setup:
